reset query params upon logout, new export playlist ui, SEO meta and title tags, Updated permissions, Readme.md, updated deploy

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,7 +21,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Personalized Playlist Maker</title>
+    <meta name="description" content="Make relevant playlists with the click of a few buttons. Pick any combination of up to 5 seeds from your top Tracks, Artists, and Genres to generate a playlist.">
+    <meta name="keywords" content="playlist maker, personalized playlist maker, spotify, spotify ppm, ppm, spotify-ppm, Ibtida Bhuiyan, react">
+    <meta name="author" content="Ibtida Bhuiyan">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
